--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,48 @@
+*, *::before, *::after{
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
+a{
+  text-decoration: none;
+}
+
+ul, ol, li{
+  list-style: none;
+}
+
+img{
+  vertical-align: top;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-weight: inherit;
+  font-size: inherit;
+}
+
+html, body{
+  height: 100%;
+  line-height: 1;
+}
+body{
+  font-family: Noto Serif, serif;
+  font-size: 14px;
+  color: #003066;
+}
+/* ---------------------------- */
+.app-wrapper{
+  background-color: #f5f5f5;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+
+}
+/* ---------------------------- */
 .container {
+  flex: 1 1 auto;
   display: grid;
   grid-template-areas:
     "header header header"
@@ -6,7 +50,12 @@
     "footer footer footer";
   grid-template-rows: 60px 1fr 60px;
   grid-template-columns: 20% 1fr 15%;
-  background-color: #f5f5f5;
   margin: 0 auto;
-  font-family: Noto Serif;
+}
+
+.headerContainer{
+  display: flex;
+  flex-direction: column;
+  background-color: #6aa7f7;
+
 }
