--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -2,12 +2,12 @@
 .login {
     display: flex;
     padding: 70px 50px 100px 80px;
-    height: 100%;
+    height: 100%;}
+{/* background-color: #6aa7f7;*/}
 
 
-}
 
-/*
+{/*
 .login::before{
     content: "";
     position: absolute;
@@ -19,7 +19,7 @@
     border-radius: 50px 0 0 50px;
     background-color: #F5F5F5;
 }
-*/
+*/}
 h1 {
     font-size: 49px;
     font-weight: bold;
@@ -33,22 +33,23 @@ h1 {
 
 .form {
     margin: 0 auto;
-    padding: 200px 95px 0 0;
+    padding: 130px 95px 0 0;
     position: relative;
     z-index: 2;
 
 }
 
 .info {
-    justify-content: flex-end;
+
 }
 
 .label {
     font-size: 21px;
+    margin: 0 auto;
 }
 
 .item {
-    margin: 0 0 20px 15px;
+    margin: 0 10px 20px 10px;
 }
 
 input {
