--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -1,11 +1,13 @@
 
 .login {
     display: flex;
-    padding: 70px 50px 100px 80px;
+    padding: 5px 50px 0px 80px;
     height: 100%;}
 {/* background-color: #6aa7f7;*/}
 
-
+.form{
+    padding-top: 50px;
+}
 
 {/*
 .login::before{
