--- a/frontend/src/components/login/Login.module.css
+++ b/frontend/src/components/login/Login.module.css
@@ -28,6 +28,12 @@ h1 {
     margin: 0 0 30px 0;
 }
 
+h2 {
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0 0 30px 0;
+}
+
 .image {
     position: relative;
     z-index: 2;
