--- a/frontend/src/components/login/Login.module.css
+++ b/frontend/src/components/login/Login.module.css
@@ -2,7 +2,7 @@
 .login {
     display: flex;
     padding: 5px 50px 0px 80px;
-    height: 100%;}
+    height: 85vh;}
 {/* background-color: #6aa7f7;*/}
 
 .form{
