--- a/frontend/src/components/login/Login.module.css
+++ b/frontend/src/components/login/Login.module.css
@@ -2,26 +2,27 @@
 .login {
     display: flex;
     padding: 5px 50px 0px 80px;
-    height: 85vh;}
-{/* background-color: #6aa7f7;*/}
+    height: 100vh;
+    background-color: #6aa7f7;
+}
 
 .form{
     padding-top: 50px;
 }
 
-{/*
+
 .login::before{
     content: "";
     position: absolute;
-    width: 100vw;
+    width: 65vw;
     height: 100%;
     right: 50px;
     top: 0;
-    transform: translate(30%, 0);
+    transform: translate(5%, 0);
     border-radius: 50px 0 0 50px;
     background-color: #F5F5F5;
 }
-*/}
+
 h1 {
     font-size: 49px;
     font-weight: bold;
@@ -35,6 +36,8 @@ h2 {
 }
 
 .image {
+    margin-top: 50px;
+    padding: 40px 20px;
     position: relative;
     z-index: 2;
 }
