--- a/frontend/src/components/mainPage/vocabulary/flashcards/Flashcards.module.css
+++ b/frontend/src/components/mainPage/vocabulary/flashcards/Flashcards.module.css
@@ -2,10 +2,53 @@
     --rotate-y: 180deg;
 }
 
-
-
-.card{
-    justify-content: center;
+.cardGrid{
+    display: grid;
     align-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 1rem;
+}
+
+.wholeItem{
+    background-color: white;
+    margin: 30px;
+}
+
+.wholeItem .correct{
+    border-color: forestgreen;
+    border-style: solid;
+    border-width: 5px;
+}
+
+.wholeItem .wrong{
+    border-color: red;
+    border-style: solid;
+    border-width: 5px;
+}
+
+
+.card {
+    display: flex;
+    align-items: center;
+    position: relative;
+    max-width: 500px;
+    background-color: #FFC2C2;
+    transform-style: preserve-3d;
+    transition: 150ms;
+    cursor: pointer;
+    transform: perspective(1000px) rotateY(var(--rotate-y, 0)) ;
+}
+.card .front{
+    left: 0;
+}
+
+.card .front, .card .back {
+    padding: 1rem;
+    backface-visibility: hidden;
+}
+
+.card .back{
+    background-color: #ff777b;
+    transform: rotateY(180deg);
 
 }
