--- a/frontend/src/components/mainPage/vocabulary/Matching/Matching.module.css
+++ b/frontend/src/components/mainPage/vocabulary/Matching/Matching.module.css
@@ -9,13 +9,29 @@
     transition: opacity 0.2s;
 }
 
+
 .draggableItems{
     display: flex;
     justify-content: center;
     margin: 1rem 1rem 1.5rem 1rem;
     transition: opacity 0.5s;
+    gap: 1rem;
 }
 
 .matchingPairs{
     transition: opacity 0.5s;
+}
+
+.cardGrid{
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 1rem;
+}
+
+.board{
+    width: 200px;
+    height: 50px;
+    border: 2px solid  #003066;
+    margin: 20px;
 }
