edited some style 2

--- a/frontend/src/components/mainPage/vocabulary/action/Action.module.css
+++ b/frontend/src/components/mainPage/vocabulary/action/Action.module.css
@@ -1,6 +1,6 @@
 .action{
     height: 100px;
-    width: 420px;
+    width: auto;
     font-size: 30px;
     margin-bottom: 20px;
     text-transform: uppercase;
