--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,7 +24,7 @@ h1,h2,h3,h4,h5,h6{
 h1 {
   font-size: 49px;
   font-weight: bold;
-  margin: 0 0 30px 0;
+  margin: 20px 0 30px 0;
 }
 
 h2{
@@ -36,14 +36,20 @@ h3{
 }
 
 
-html, body{
+html{
   line-height: 1;
+
+
 }
 
 body{
-  font-family: Noto Serif, serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #003066;
+  display: table;
+  width: 100%;
+  min-height: 100vh;
+
 }
 /* ---------------------------- */
 .app-wrapper{
@@ -72,3 +78,5 @@ body{
   flex-direction: column;
   background-color: #6aa7f7;
 }
+
+
