--- a/frontend/src/components/mainPage/vocabulary/quiz/QuizPage.module.css
+++ b/frontend/src/components/mainPage/vocabulary/quiz/QuizPage.module.css
@@ -1,16 +1,15 @@
 .quiz {
     margin: 0;
-    display: flex;
     align-items: center;
     justify-content: center;
-    height: 77vh;
+    height: 70vh;
 }
 
 .modal{
-    width: 900px;
+    width: 800px;
     border-radius: 30px;
     padding: 40px;
-    background-color: #fff;
+    background-color: #ffffff;
     position: relative;
 }
 
