--- a/frontend/src/components/mainPage/MainPage.module.css
+++ b/frontend/src/components/mainPage/MainPage.module.css
@@ -10,6 +10,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
 .image {
-    float: right;
+    display: flex;
+    justify-content: end;
 }
