--- a/frontend/src/components/mainPage/lessons/Lessons.module.css
+++ b/frontend/src/components/mainPage/lessons/Lessons.module.css
@@ -2,5 +2,12 @@
     text-transform: uppercase;
     margin: 0 auto;
     text-align: center;
+}
 
+.cardContent {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: start;
+    gap: 4px;
 }
