--- a/frontend/src/components/userPage/UserPage.module.css
+++ b/frontend/src/components/userPage/UserPage.module.css
@@ -5,3 +5,34 @@
     flex-direction: column;
     min-height: 100%;
 }
+
+.modal {
+    width: 800px;
+    border-radius: 30px;
+    padding: 40px;
+    background-color: #fcdede;
+    position: relative;
+    display: flex;
+}
+
+.modalInside{
+    margin: 30px;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.level{
+    display: flex;
+    gap: 20px;
+}
+
+h3{
+    margin-bottom: 10px;
+}
