--- a/frontend/src/components/mainPage/lessons/Lessons.module.css
+++ b/frontend/src/components/mainPage/lessons/Lessons.module.css
@@ -5,7 +5,7 @@
 }
 
 .cardContent {
-    width: 600px;
+    /*width: 600px;*/
     display: grid;
     grid-auto-flow: column;
     align-items: center;
