--- a/frontend/src/components/mainPage/vocabulary/action/Action.module.css
+++ b/frontend/src/components/mainPage/vocabulary/action/Action.module.css
@@ -7,3 +7,25 @@
     color: #003066;
     padding: 12px 8px;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .example {background: red;}
+}
+
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .example {
+        background: pink;
+    }
+
+}
