--- a/frontend/src/components/login/Login.module.css
+++ b/frontend/src/components/login/Login.module.css
@@ -36,7 +36,8 @@ h2 {
 }
 
 .image {
-    margin-top: 50px;
+    margin-top: 100px;
+    margin-left: 120px;
     padding: 40px 20px;
     position: relative;
     z-index: 2;
@@ -44,7 +45,7 @@ h2 {
 
 .form {
     margin: 0 auto;
-    padding: 130px 95px 0 0;
+    padding: 220px 95px 0 0;
     position: relative;
     z-index: 2;
 
